Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32975

Default charset doesn't work with PHP MySQLi extension

    XMLWordPrintable

Details

    Description

      Some charset change in MariaDB 11.3.1 appears to break PHP clients, raising the error 'Server sent charset (0) unknown to the client'.

      I noticed /etc/mysql/mariadb.conf.d/50-server.cnf changed
      collation-server = utf8mb4_general_ci (11.2.2)
      to
      character-set-collations = utf8mb4=uca1400_ai_ci (11.3.1)

      If I change this back, connections from PHP work again.

      This Plesk user seems to have encountered the same issue: https://talk.plesk.com/threads/500-plesk-exception-database-db-query-failed-sqlstate-hy000-2054-server-sent-charset-0-unknown-to-the-client.372563/

      Steps to reproduce:

      • Install PHP 8.3, including MySQLi extension.
      • Install MariaDB 11.3.1, CREATE USER 'username'@'localhost' IDENTIFIED BY 'password';.
      • Test a PHP page, e.g.

                                                                                            
        <?php
        error_reporting(E_ALL);
        ini_set('display_errors', 'on');
        $conn = new mysqli("localhost", "username", "password");
        if ($conn->connect_error) {
          die("Connection failed: " . $conn->connect_error);
        }
        echo "Connected successfully";
        ?>
        

      • Observe error:

        Fatal error: Uncaught mysqli_sql_exception: Server sent charset (0) unknown to the client. Please, report to the developers in /var/www/html/index.php:4 Stack trace: #0 /var/www/html/index.php(4): mysqli->__construct() #1 {main} thrown in /var/www/html/index.php on line 4
        

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              Quppa David Warner
              Votes:
              3 Vote for this issue
              Watchers:
              11 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.