MDEV-32975 Default charset doesn't work with PHP MySQLi extension

When sending the server default collation ID to the client
in the handshake packet, translate a 2-byte collation ID
to the ID of the default collation for the character set.